--- a/files/2_tp_semestre1/4_dichotomie.ipynb
+++ b/files/2_tp_semestre1/4_dichotomie.ipynb
@@ -18,13 +18,104 @@
    },
    "source": [
     "**Exercice**  \n",
-    "1. Écrire une fonction `appartient` telle que `appartient(e, L)` renvoie un booléen permettant de savoir si `e` appartient à la liste `L`.  \n",
+    "1. Écrire une fonction `appartient` telle que `appartient(e, L)` renvoie un booléen permettant de savoir si `e` appartient à la liste `L`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def appartient(e, l):\n",
+    "    for i in l:\n",
+    "        if i==e:\n",
+    "            return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "appartient(1,[1,2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
+   "source": [
+    "  \n",
     "2. Donner le nombre de comparaisons (une comparaison étant une utilisation de `==` ou `<`, par exemple)  effectuées par `appartient` pour des valeurs suivantes de `e` et `L` :\n",
     "- `e = 2` et `L = [2, 4, 1, 7]`\n",
     "- `e = 3` et `L = [2, 4, 1, 7]`\n",
-    "- `e = 1` et `L = [2, 4, 1, 7]`\n",
-    "3. Soit `L` une liste de taille $n$. Quel est le nombre minimum de comparaisons réalisées par `appartient` sur la liste `L` ? Et le nombre maximum ? Quel est l'indicateur qui vous semble le plus pertinent ?  \n",
+    "- `e = 1` et `L = [2, 4, 1, 7]`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Premier cas: on a une comparaison\n",
+    "# Deuxième cas: on a 4 comparaisons\n",
+    "# Troisième cas: on a 3 comparaisons"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
+   "source": [
+    "3. Soit `L` une liste de taille $n$. Quel est le nombre minimum de comparaisons réalisées par `appartient` sur la liste `L` ? Et le nombre maximum ? Quel est l'indicateur qui vous semble le plus pertinent ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si l'élément cherché est en premier on a une comparaison (nb minimum de comparaison sur L)\n",
+    "Sinon le nb max de comparaison sur L est n (la taille de L) car l'élément cherché serait placé a la dernière position"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
+   "source": [
+    "  \n",
     "4. En supposant avoir un ordinateur à 1 GHz (permettant de réaliser $10^9$ opérations par seconde), et qu'une comparaison demande une opération pour le processeur, combien de temps au plus prendrait l'exécution de `appartient` sur une liste de taille $10^{11}$ ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si on prend le nb max de comparaison le temps de l'éxécution de la fonction serait de (10^11)/(10^9)secondes"
    ]
   },
   {
@@ -46,6 +137,31 @@
    },
    "source": [
     "**Exercice** : Écrire une fonction `croissant` telle que `croissant(L)` renvoie un booléen indiquant si `L` est triée par ordre croissant. Cette fonction ne sera pas utilisée dans la suite (on supposera que la liste est bien triée, sans vérifier)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def croissant(l):\n",
+    "    for i in range(len(l)-1):\n",
+    "        if l[i]>l[i+1]:\n",
+    "            return False\n",
+    "    return True\n",
+    "croissant([-2,1,2,4,6,7,8,9,11,12,14,15,18,22,54])"
    ]
   },
   {
@@ -89,16 +205,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Avec la dichotomie on a utilisé 4 comparaisons alors que si on avait utilisé appartient(e,L) il y aurait eu 11 comparaisons"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Pour se souvenir de la zone dans laquelle on cherche l'élément $e$ (encadrée sur l'exemple ci-dessus), on utilise deux indices $i$ et $j$."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "exo"
-    ]
-   },
+   "metadata": {},
    "source": [
     "**Exercice** : Compléter le code suivant permettant de rechercher un élément dans une liste triée, par dichotomie.\n",
     "```python\n",
@@ -113,7 +232,45 @@
     "        else:\n",
     "            ... # on a trouvé e\n",
     "    ... # e n'a pas été trouvé\n",
-    "```\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def dichotomie(e, L):\n",
+    "    i, j = 0, len(L) - 1\n",
+    "    while j-i!=0:\n",
+    "        m = (i+j)//2\n",
+    "        if e<L[m]:\n",
+    "            j=m-1\n",
+    "        elif e>L[m]:\n",
+    "            i=m+1\n",
+    "        elif e==L[m]:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "dichotomie(4,[-2,1,2,4,6,7,8,9,11,12,14,15,18,22,54])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Puis tester votre fonction avec le jeu de tests suivant (`assert` déclenche une erreur si son argument est `False`) :  \n",
     "```python\n",
     "L1, L2, L3 = [0, 2], [0, 2, 5], [-2, 1, 2, 4, 6, 7, 8, 9, 11, 12, 14, 15, 18, 22, 54]\n",
@@ -121,6 +278,66 @@
     "assert (dichotomie(5, L2) and not dichotomie(7, L2))\n",
     "assert (dichotomie(14, L3) and not dichotomie(-4, L3))\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L1, L2, L3 = [0, 2], [0, 2, 5], [-2, 1, 2, 4, 6, 7, 8, 9, 11, 12, 14, 15, 18, 22, 54]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert (dichotomie(0, L1) and not dichotomie(1, L1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_114/2079917173.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdichotomie\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mL2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mdichotomie\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mL2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "assert (dichotomie(5, L2) and not dichotomie(7, L2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_114/357028446.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdichotomie\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m14\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mL3\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mdichotomie\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mL3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "assert (dichotomie(14, L3) and not dichotomie(-4, L3))"
    ]
   },
   {
@@ -132,6 +349,13 @@
    },
    "source": [
     "**Exercice** : On admet que `dichotomie(e, L)` réalise au plus environ $\\log(n)$ opérations si `L` est de taille $n$. Sur un ordinateur à 1 GHz, combien de temps au plus prendrait l'exécution de `dichotomie` pour une liste de taille $10^{11}$ ?  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ordinateur a 1 GHz donc 10^9 opérations a la seconde, donc on aurait log(10^11)/(10^9) secondes d'éxécution pour le programme."
    ]
   },
   {
@@ -150,8 +374,60 @@
    },
    "source": [
     "**Exercice**  \n",
-    "1. Écrire une fonction `puissance` telle que `puissance(a, n)` renvoie `a` puissance `n` (la même chose que `a**n`). On utilisera $a^n = a\\times a \\times... \\times a$.  \n",
+    "1. Écrire une fonction `puissance` telle que `puissance(a, n)` renvoie `a` puissance `n` (la même chose que `a**n`). On utilisera $a^n = a\\times a \\times... \\times a$.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def puissance(a,n):\n",
+    "    b=a\n",
+    "    for i in range(1,n):\n",
+    "        b=b*a\n",
+    "    return b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "puissance(2,2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
+   "source": [
     "2. Quel est le nombre de multiplications réalisé par la fonction précédente ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# On a n multiplication"
    ]
   },
   {
@@ -194,11 +470,206 @@
    },
    "source": [
     "**Exercice**  \n",
-    "1. Exécuter à la main `puissance_rapide(2, 12)`. On donnera la valeur de `r`, `a` et `n` à la fin de chaque passage dans la boucle `while`. \n",
-    "2. Comparer le nombre de multiplications dans l'exemple ci-dessus avec le nombre de multiplications réalisé par `puissance(2, 12)`.\n",
-    "3. Montrer que la valeur de $r a^n$ reste identique à chaque passage dans le `while`. En déduire que `puissance_rapide(a, n)` renvoie bien $a^n$.  \n",
+    "1. Exécuter à la main `puissance_rapide(2, 12)`. On donnera la valeur de `r`, `a` et `n` à la fin de chaque passage dans la boucle `while`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1//2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1: r=1,a=4,n=6/   2: r=1,a=16,n=3/   3: r=16,a=256,n=1/   4: r=4096,a=65536,n=0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
+   "source": [
+    " \n",
+    "2. Comparer le nombre de multiplications dans l'exemple ci-dessus avec le nombre de multiplications réalisé par `puissance(2, 12)`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "le nb de multiplication dans l'exemple ci-dessus est inférieur a celui utiliser par la fonction puissance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
+   "source": [
+    "3. Montrer que la valeur de $r a^n$ reste identique à chaque passage dans le `while`. En déduire que `puissance_rapide(a, n)` renvoie bien $a^n$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4096"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#boucle 1:\n",
+    "1*(4**6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4096"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#boucle 2:\n",
+    "1*(16**3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4096"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#boucle 3:\n",
+    "16*(256**1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4096"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#boucle 4:\n",
+    "4096*(65536**0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
+   "source": [
+    "  \n",
     "4. Comment pourrais-t-on utiliser une multiplication de moins dans `puissance_rapide`. Modifier la fonction pour ce faire."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def puissance_rapide_bis(a, n):\n",
+    "    r = 1\n",
+    "    a=a\n",
+    "    while n != 1:\n",
+    "        if n % 2 == 1:\n",
+    "            r = r * a\n",
+    "        a = a * a\n",
+    "        n = n // 2\n",
+    "    r=r*a\n",
+    "    return r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4096"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "puissance_rapide_bis(2,12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -206,7 +677,7 @@
    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -220,7 +691,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
