--- a/files/2_tp_semestre1/5_recursivite.ipynb
+++ b/files/2_tp_semestre1/5_recursivite.ipynb
@@ -95,6 +95,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# le code suivant affiche 1 puis 2 jusqu'a n\n",
+    "def ff(n):\n",
+    "    if n == 0:\n",
+    "        return\n",
+    "    f(n-1)\n",
+    "    print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "ff(5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -124,6 +159,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dessin(n):\n",
+    "    if n==0:\n",
+    "        return\n",
+    "    for i in range(n):\n",
+    "        print(\"*\", end=\"\")\n",
+    "    print()\n",
+    "    dessin(n-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "dessin(5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "tags": [
@@ -145,6 +216,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dessin_bis(n,nn):\n",
+    "    a=n\n",
+    "    if n==0:\n",
+    "        for r in range(a):\n",
+    "            for rr in range(r):\n",
+    "                print(\"*\", end=\"\")\n",
+    "            print()\n",
+    "        return\n",
+    "    dessin_bis(n-1,nn)\n",
+    "    a+=1\n",
+    "    for i in range(n):\n",
+    "        print(\"*\", end=\"\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n"
+     ]
+    }
+   ],
+   "source": [
+    "dessin_bis(5,5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Je n'arrive pas a faire cette fonction comment est-il possible de la faire ?"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -160,6 +280,31 @@
    },
    "source": [
     "**Exercice** : En utilisant une boucle, écrire une fonction `somme` telle que `somme(n)` renvoie la somme des carrés des entiers de 1 à $n$ (c'est-à-dire $1^2 + 2^2 + 3^2 + ... + n^2$)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def somme(n):\n",
+    "    a=0\n",
+    "    for i in range(1,n+1):\n",
+    "        a+=i**2\n",
+    "    return a\n",
+    "somme(3)"
    ]
   },
   {
@@ -222,8 +367,51 @@
    },
    "source": [
     "**Exercice** :\n",
-    "1. On souhaite calculer $n!$ ($= n\\times (n - 1)\\times ... \\times 2\\times 1$). Exprimer $n!$ en fonction de $(n - 1)!$.  \n",
+    "1. On souhaite calculer $n!$ ($= n\\times (n - 1)\\times ... \\times 2\\times 1$). Exprimer $n!$ en fonction de $(n - 1)!$. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "n!= n(n-1)!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
+   "source": [
+    " \n",
     "2. En déduire une fonction récursive `fact` telle que `fact(n)` renvoie $n!$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fact(n):\n",
+    "    if n==0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return fact(n-1)*n\n",
+    "fact(4)"
    ]
   },
   {
@@ -271,6 +459,25 @@
    "source": [
     "**Exercice** : Réécrire `dichotomie` sous forme de fonction récursive, en mettant`i` et `j` en arguments.  Tester sur des exemples."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Je n'arrives vraiment pas a comprendre la récursivité"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dicho(e,l,i,j):\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -278,7 +485,7 @@
    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -292,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
