--- a/files/2_tp_semestre1/7_glouton.ipynb
+++ b/files/2_tp_semestre1/7_glouton.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F7_glouton.ipynb%26branch%3Dmaster'>Algorithmes gloutons <img src=https://mybinder.org/badge.svg></a></center>"
+    "# Algorithmes gloutons"
    ]
   },
   {
@@ -17,7 +17,7 @@
     "- Diviser pour régner\n",
     "- ...\n",
     "\n",
-    "Dans ce TP, on s'intéresse aux **algorithmes gloutons**, qui s'utilisent souvent sur des problèmes d'optimisation (on cherche à maximiser quelque chose avec des contraintes). \n",
+    "Dans ce TP, on s'intéresse aux **algorithmes gloutons**, qui s'utilisent souvent sur des problèmes d'optimisation (où on cherche à maximiser quelque chose avec des contraintes). \n",
     "> Un algorithme est glouton lorsqu'il effectue, à chaque étape, le choix qui semble le meilleur à ce moment-là et qui ne revient jamais sur sa décision.\n",
     "\n",
     "La notion d'algorithme glouton est donc assez vague : nous allons l'illustrer avec quelques exemples."
@@ -34,14 +34,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice** : Écrire une fonction pour calculer la somme des éléments d'une liste."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice** : Écrire une fonction pour déterminer si une liste est triée dans l'ordre croissant."
    ]
@@ -71,7 +79,7 @@
     ]
    },
    "source": [
-    "**Exercice** : Écrire une fonction `rendre_monnaie(c, p)` qui rend une liste des pièces obtenues avec l'algorithme glouton pour rendre la valeur $c$ avec des pièces dans la liste `pieces`.  \n",
+    "**Exercice** : Écrire une fonction `rendre_monnaie(c, pieces)` qui rend une liste des pièces obtenues avec l'algorithme glouton pour rendre la valeur $c$ avec des pièces dans la liste `pieces`.  \n",
     "Par exemple, `rendre_monnaie(6, [1, 2, 4])` doit renvoyer `[4, 2]` et `rendre_monnaie(5, [1, 3, 7])` doit renvoyer `[3, 1, 1]`.  \n",
     "On pourra s'inspirer du code suivant :\n",
     "```python\n",
@@ -123,7 +131,7 @@
    },
    "source": [
     "**Exercice** : Écrire une fonction `intersecte` pour déterminer si deux cours se chevauchent.  \n",
-    "Par exemple, `intersecte((1, 3), (2, 4))` renvoie `True` mais `intersecte((1, 2), (3, 5))` renvoie `False`."
+    "Par exemple, `intersecte((1, 3), (2, 4))` doit renvoyer `True` mais `intersecte((1, 2), (3, 5))` doit renvoyer `False`."
    ]
   },
   {
@@ -205,7 +213,7 @@
     ]
    },
    "source": [
-    "**Exercice** : Écrire une fonction `allocation_salles(cours)` qui renvoie une liste des salles utilisées par les cours de la liste `cours`.  \n",
+    "**Exercice** : Écrire une fonction `allocation_salles(cours)` qui renvoie une liste des salles utilisées par les cours de la liste `cours` en appliquant l'algorithme glouton.  \n",
     "On pourra compléter le code suivant :  "
    ]
   },
@@ -214,10 +222,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-02T17:43:21.809367Z",
-     "iopub.status.busy": "2022-01-02T17:43:21.808888Z",
-     "iopub.status.idle": "2022-01-02T17:43:21.818089Z",
-     "shell.execute_reply": "2022-01-02T17:43:21.818447Z"
+     "iopub.execute_input": "2022-01-04T21:02:57.639920Z",
+     "iopub.status.busy": "2022-01-04T21:02:57.638674Z",
+     "iopub.status.idle": "2022-01-04T21:02:57.643443Z",
+     "shell.execute_reply": "2022-01-04T21:02:57.643799Z"
     }
    },
    "outputs": [
@@ -226,7 +234,7 @@
      "evalue": "invalid syntax (79231005.py, line 6)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_2131/79231005.py\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    if ... # si on peut mettre le cours c en salle s\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_2130/79231005.py\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    if ... # si on peut mettre le cours c en salle s\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -263,6 +271,17 @@
     "2. On considère chaque itervalle dans cet ordre et on le sélectionne s'il n'intersecte pas les autres intervalles déjà choisis.  \n",
     "\n",
     "**Remarque** : À nouveau, on peut montrer que cet algorithme glouton est optimal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
+   "source": [
+    "**Exercice** : Écrire cet algorithme glouton en Python."
    ]
   }
  ],
