--- a/files/2_tp_semestre1/7_glouton.ipynb
+++ b/files/2_tp_semestre1/7_glouton.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F7_glouton.ipynb%26branch%3Dmaster'>Algorithmes gloutons <img src=https://mybinder.org/badge.svg></a></center>"
+    "# TP 7 : Algorithmes gloutons"
    ]
   },
   {
@@ -222,10 +222,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-04T21:02:57.639920Z",
-     "iopub.status.busy": "2022-01-04T21:02:57.638674Z",
-     "iopub.status.idle": "2022-01-04T21:02:57.643443Z",
-     "shell.execute_reply": "2022-01-04T21:02:57.643799Z"
+     "iopub.execute_input": "2022-01-04T21:10:40.958800Z",
+     "iopub.status.busy": "2022-01-04T21:10:40.958300Z",
+     "iopub.status.idle": "2022-01-04T21:10:40.968029Z",
+     "shell.execute_reply": "2022-01-04T21:10:40.968391Z"
     }
    },
    "outputs": [
@@ -234,7 +234,7 @@
      "evalue": "invalid syntax (79231005.py, line 6)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_2130/79231005.py\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    if ... # si on peut mettre le cours c en salle s\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_2131/79231005.py\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    if ... # si on peut mettre le cours c en salle s\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
