--- a/files/2_tp_semestre1/7_glouton.ipynb
+++ b/files/2_tp_semestre1/7_glouton.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F7_glouton.ipynb%26branch%3Dmaster'>TP 7 : Algorithmes gloutons <img src=https://mybinder.org/badge.svg></a></center>"
+    "# TP 7 : Algorithmes gloutons"
    ]
   },
   {
@@ -202,7 +202,7 @@
    },
    "source": [
     "**Exercice** : Écrire une fonction `choisir_salle` telle que, si `c` est un cours, `choisir_salle(c, salles)` renvoie une salle disponible pour `c`, ou `-1` si aucune salle n'est disponible.  \n",
-    "Par exemple, `choisir_salle((7, 10), [[(9, 11)], [(12, 15)]])` doit renvoyer `1` mais `choisir_salle((7, 10), [(8, 10), (9, 12)])` doit renvoyer `-1`."
+    "Par exemple, `choisir_salle((7, 10), [[(9, 11)], [(12, 15)]])` doit renvoyer `1` mais `choisir_salle((7, 10), [[(8, 10)], [(9, 12)]])` doit renvoyer `-1`."
    ]
   },
   {
@@ -222,19 +222,19 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-04T21:10:40.958800Z",
-     "iopub.status.busy": "2022-01-04T21:10:40.958300Z",
-     "iopub.status.idle": "2022-01-04T21:10:40.968029Z",
-     "shell.execute_reply": "2022-01-04T21:10:40.968391Z"
+     "iopub.execute_input": "2022-01-05T10:59:17.044536Z",
+     "iopub.status.busy": "2022-01-05T10:59:17.044058Z",
+     "iopub.status.idle": "2022-01-05T10:59:17.054068Z",
+     "shell.execute_reply": "2022-01-05T10:59:17.053648Z"
     }
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (79231005.py, line 6)",
+     "evalue": "invalid syntax (2982992462.py, line 6)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_2131/79231005.py\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    if ... # si on peut mettre le cours c en salle s\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_2135/2982992462.py\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    if ... # si on peut mettre le cours c en salle s\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -248,7 +248,7 @@
     "                salles[s].append(c) # on ajoute le cours c à la liste des cours de la salle s\n",
     "                break # on sort de la boucle for\n",
     "    \n",
-    "    return list(d.values())"
+    "    return salles"
    ]
   },
   {
