--- a/files/2_tp_semestre1/7_glouton.ipynb
+++ b/files/2_tp_semestre1/7_glouton.ipynb
@@ -135,6 +135,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def intersecte(a,b):\n",
+    "    c=0\n",
+    "    for i in range(a[0],a[1]):\n",
+    "        for j in range(b[0],b[1]):\n",
+    "            if i==j:\n",
+    "                c+=1\n",
+    "    if c>=1:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "intersecte((1, 3), (2, 4))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -186,6 +216,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def intersecte_list(c,l):\n",
+    "    for e in l:\n",
+    "        if intersecte(e,c)==True:\n",
+    "            return True\n",
+    "    return False"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -206,6 +249,81 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b=[[(12, 15),(16,19)], [(22, 25)]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(False, 1)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def intersecte_bis(a,salles):\n",
+    "    c=0\n",
+    "    d=0\n",
+    "    r=0\n",
+    "    for j in range(len(salles)):\n",
+    "        for h in range(len(salles[j])):\n",
+    "            c=0\n",
+    "            for k in range(salles[j][h][0],salles[j][h][1]+1):\n",
+    "                for i in range(a[0],a[1]+1):\n",
+    "                    if i==k:\n",
+    "                        c+=1\n",
+    "            if c>=2:\n",
+    "                d=1\n",
+    "            else:\n",
+    "                d=0\n",
+    "                r=j\n",
+    "    if d==1:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False,r\n",
+    "intersecte_bis((7, 11), b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def choisir_salle(c,salles):\n",
+    "    a,b=intersecte_bis(c,salles)\n",
+    "    if a==False:\n",
+    "        return b\n",
+    "    else:\n",
+    "        return (-1)\n",
+    "choisir_salle((7, 10), b)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "tags": [
@@ -219,36 +337,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 87,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-01-05T10:59:17.044536Z",
-     "iopub.status.busy": "2022-01-05T10:59:17.044058Z",
-     "iopub.status.idle": "2022-01-05T10:59:17.054068Z",
-     "shell.execute_reply": "2022-01-05T10:59:17.053648Z"
-    }
+    "tags": []
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2982992462.py, line 6)",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8, 13)\n",
+      "1\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "cannot unpack non-iterable bool object",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_2135/2982992462.py\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    if ... # si on peut mettre le cours c en salle s\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_148/2564717177.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m             \u001b[0msalles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0msalles\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mallocation_salles\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m11\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m13\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m17\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m14\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m11\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m14\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m16\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m14\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m17\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m13\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_148/2564717177.py\u001b[0m in \u001b[0;36mallocation_salles\u001b[0;34m(cours)\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcours\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# parcours de la liste cours\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0ma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mchoisir_salle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msalles\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m!=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_148/4177638281.py\u001b[0m in \u001b[0;36mchoisir_salle\u001b[0;34m(c, salles)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mchoisir_salle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msalles\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mintersecte_bis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msalles\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: cannot unpack non-iterable bool object"
      ]
     }
    ],
    "source": [
     "def allocation_salles(cours):\n",
-    "    cours.sort(key=lambda c: c[0]) # trie les cours par ordre de début croissant\n",
+    "    cours.sort(key=lambda c :c[0]) # trie les cours par ordre de début croissant\n",
     "    salles = []\n",
+    "    if len(salles)==0:\n",
+    "            salles.append([cours[0]])\n",
     "    for c in cours: # parcours de la liste cours\n",
-    "        for s in range(len(salles)): # teste si on peut mettre le cours c en salle s\n",
-    "            if ... # si on peut mettre le cours c en salle s\n",
-    "                salles[s].append(c) # on ajoute le cours c à la liste des cours de la salle s\n",
-    "                break # on sort de la boucle for\n",
-    "    \n",
-    "    return salles"
+    "        a=choisir_salle(c,salles)\n",
+    "        if a!=(-1):\n",
+    "            print(2)\n",
+    "            salles[a].append(c)\n",
+    "        else:\n",
+    "            salles.append([c])\n",
+    "    return salles\n",
+    "allocation_salles([(9,11),(12,15),(8,13),(15,17),(9,14),(11,12),(14,16),(9,10),(14,17),(13,15)])"
    ]
   },
   {
@@ -283,6 +413,23 @@
    "source": [
     "**Exercice** : Écrire cet algorithme glouton en Python."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inter_schedul(cours):\n",
+    "    cours.sort(key=lambda c: c[1])\n",
+    "    inter=[]\n",
+    "    for e in cours:\n",
+    "        for i in range(len(inter)):\n",
+    "            if intersecte(e,i)==False:\n",
+    "                inter[i].append(e)\n",
+    "    return inter\n",
+    "inter_schedul([[9,11],[12,15],[8,13],[15,17],[9,14],[11,12],[14,16],[9,10],[14,17],[13,15]])"
+   ]
   }
  ],
  "metadata": {
@@ -290,7 +437,7 @@
    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -304,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
